Docstring and params.conf comments

--- a/params.conf
+++ b/params.conf
@@ -1,6 +1,10 @@
 [DEFAULT]
 
-# dsdq
+# Target switch DPID for logging traffic information
 target_dpid = 3
+
+# CSV dataset file path
 csv_path = "data/dataset.csv"
+
+# Time interval between monitoring (in seconds)
 interval=2
